Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -1,71 +1,71 @@
 ---
-title: Introduction
-description: "Welcome to the home of your new documentation"
+title: "T77 Sharehouse"
+description: "ノマド仲間が集まるバンコク拠点｜T77コミュニティ公式サイト"
 ---
 
-<img
-  className="block dark:hidden"
-  src="/images/hero-light.png"
-  alt="Hero Light"
-/>
-<img
-  className="hidden dark:block"
-  src="/images/hero-dark.png"
-  alt="Hero Dark"
-/>
+import Callout from "components/Callout.mdx";
+import Tabs from "components/Tabs.mdx";
+import TabItem from "components/TabItem.mdx";
 
-## Setting up
+<div align="center">
 
-The first step to world-class documentation is setting up your editing environments.
+# T77 Sharehouse 🏠✨  
+**ノマド × クリエイティブ × コミュニティ** が全部ここに。  
 
-<CardGroup cols={2}>
-  <Card
-    title="Edit Your Docs"
-    icon="pen-to-square"
-    href="https://mintlify.com/docs/quickstart"
-  >
-    Get your docs set up locally for easy development
-  </Card>
-  <Card
-    title="Preview Changes"
-    icon="image"
-    href="https://mintlify.com/docs/development"
-  >
-    Preview your changes before you push to make sure they're perfect
-  </Card>
-</CardGroup>
+バンコク・オンヌットの新築タウンハウスで、  
+仲間と暮らしながらビジネスも遊びも加速させよう。
 
-## Make it yours
+[予約する](https://forms.gle/xxxxx){.button}
 
-Update your docs to your brand and add valuable content for the best user conversion.
+</div>
 
-<CardGroup cols={2}>
-  <Card
-    title="Customize Style"
-    icon="palette"
-    href="https://mintlify.com/docs/settings/global"
-  >
-    Customize your docs to your company's colors and brands
-  </Card>
-  <Card
-    title="Reference APIs"
-    icon="code"
-    href="https://mintlify.com/docs/api-playground/openapi"
-  >
-    Automatically generate endpoints from an OpenAPI spec
-  </Card>
-  <Card
-    title="Add Components"
-    icon="screwdriver-wrench"
-    href="https://mintlify.com/docs/content/components/accordions"
-  >
-    Build interactive features and designs to guide your users
-  </Card>
-  <Card
-    title="Get Inspiration"
-    icon="stars"
-    href="https://mintlify.com/customers"
-  >
-    Check out our showcase of our favorite documentation
-  </Card>
-</CardGroup>
+---
+
+## ここがポイント
+
+| 🚀 | **高速 Wi-Fi** (500 Mbps)  |
+| --- | ------------------------- |
+| 🎮 | 24h コワーキング＋ゲームラウンジ |
+| 🌴 | BTSオンヌット駅から車5分、運河沿いの静かな環境 |
+| 🤝 | 毎週土曜「T77体験会」＆月1ビジネス LT 会 |
+
+<Callout emoji="💡">
+短期旅行者も OK！ 1 泊から長期までフレキシブルに滞在できます。
+</Callout>
+
+---
+
+## お部屋タイプ
+
+<Tabs groupId="rooms">
+  <TabItem value="dorm" label="ドミトリー">
+    - 料金: **400 THB / 泊**  
+    - 2段ベッド / カーテン・ライト・USB  
+    - 共用バスルーム
+  </TabItem>
+  <TabItem value="private" label="個室">
+    - 料金: **12,000 THB / 月**  
+    - クイーンベッド / 専用デスク / バルコニー  
+    - 専用バスルーム
+  </TabItem>
+  <TabItem value="suite" label="マスター">
+    - 料金: **18,000 THB / 月**  
+    - キング＋ソファ＋55"TV  
+    - バスタブ付き
+  </TabItem>
+</Tabs>
+
+---
+
+## コミュニティプラン
+
+| プラン | 月額 | 含まれるもの |
+| ------ | ---- | ------------ |
+| **Resident** | 0 THB (家賃込み) | 住民専用 Slack・イベント無料 |
+| **Nomad Pass** | 1,000 THB | 月3泊 + イベント参加権 |
+| **Supporter** | 500 THB | Discord閲覧 & シェアハウス 3 泊無料券 |
+
+---
+
+## アクセス
+
